# api

./: .justfile  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  cliff.toml  commitlint.config.js  deny.toml
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  commitlint.yml  coverage.yml  deny.yml  fmt.yml  outdated.yml  publish.yml  udeps.yml
examples/: main.rs
src/: lib.rs
src/ciweimao/: mod.rs  structure.rs  utils.rs
src/ciweimao/assets/: geetest.js  index.html
src/common/: client.rs  error.rs  mod.rs  net.rs
src/common/database/: mod.rs
src/common/database/entity/: image.rs  mod.rs  text.rs
src/common/database/migration/: m20221215_070928_create_table.rs  mod.rs
src/common/utils/: dir.rs  keyring.rs  mod.rs  timing.rs  uid.rs
src/sfacg/: mod.rs  structure.rs  utils.rs
tests/: ciweimao.rs  sfacg.rs
