[package]
name = "novel-api"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/novel-rs/api"
homepage = "https://github.com/novel-rs/api"
documentation = "https://docs.rs/novel-api"
description = "Apis of sfacg and ciweimao"
readme = "README.md"
keywords = ["novel", "sfacg", "ciweimao"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
# https://github.com/dtolnay/thiserror
thiserror = "1.0.38"
# https://github.com/dtolnay/anyhow
anyhow = "1.0.68"
# https://github.com/popzxc/stdext-rs
stdext = "0.3.1"
# https://github.com/serde-rs/serde
serde = { version = "1.0.152", features = ["derive"] }
# https://github.com/dtolnay/async-trait
async-trait = "0.1.63"
# https://github.com/tokio-rs/tokio
tokio = { version = "1.24.2", features = [
  "fs",
  "sync",
  "rt-multi-thread",
  "parking_lot",
] }
# https://github.com/tkaitchuck/ahash
ahash = "0.8.3"
# https://github.com/Amanieu/parking_lot
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
# https://github.com/matklad/once_cell
once_cell = { version = "1.17.0", features = ["parking_lot"] }
# https://github.com/rusticstuff/simdutf8
simdutf8 = { version = "0.1.4", features = ["aarch64_neon"] }
# https://github.com/serde-rs/json
serde_json = "1.0.91"
# https://github.com/causal-agent/scraper
scraper = { version = "0.14.0", default-features = false }
# https://github.com/uuid-rs/uuid
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
# https://github.com/chronotope/chrono
chrono = { version = "0.4.23", default-features = false, features = [
  "std",
  "serde",
] }
# https://github.com/dtolnay/semver
semver = "1.0.16"
# https://github.com/tokio-rs/tracing
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
# https://github.com/Nugine/simd
hex-simd = "0.8.0"
# https://github.com/Nugine/simd
base64-simd = "0.8.0"
# https://github.com/cloudflare/boring
boring = "2.1.0"
# https://github.com/dirs-dev/directories-rs
directories = "4.0.1"
# https://github.com/pfernie/cookie_store
cookie_store = "0.19.0"
# https://github.com/pfernie/reqwest_cookie_store
reqwest_cookie_store = "0.5.0"
# https://github.com/hyperium/http
http = "0.2.8"
# https://github.com/servo/rust-url
url = { version = "2.3.1", features = ["serde"] }
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.11.14", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "gzip",
  "brotli",
  "deflate",
  "json",
  "trust-dns",
] }
# https://github.com/seanmonstar/warp
warp = { version = "0.3.3", default-features = false }
# https://github.com/image-rs/image
image = { version = "0.24.5", default-features = false, features = [
  "png",
  "jpeg",
  "jpeg_rayon",
  "webp",
  "webp-encoder",
] }
# https://github.com/Nemo157/async-compression
async-compression = { version = "0.3.15", features = ["tokio", "zstd"] }
# https://github.com/SeaQL/sea-orm
sea-orm = { version = "0.10.7", default-features = false, features = [
  "with-chrono",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
# https://github.com/SeaQL/sea-orm
sea-orm-migration = { version = "0.10.7", default-features = false }
# https://github.com/rust-cli/confy
confy = "0.5.1"
# https://github.com/hwchen/keyring-rs
keyring = "1.2.1"
# https://github.com/Hanaasagi/machine-uid
machine-uid = "0.2.0"
# https://github.com/Seeker14491/opener
opener = "0.5.0"

[dev-dependencies]
# https://github.com/rust-pretty-assertions/rust-pretty-assertions
pretty_assertions = "1.3.0"
# https://github.com/tokio-rs/tokio
tokio = { version = "1.24.2", features = [
  "macros",
  "fs",
  "rt-multi-thread",
  "parking_lot",
] }
