[package]
name = "novel-api"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/novel-rs/api"
homepage = "https://github.com/novel-rs/api"
documentation = "https://docs.rs/novel-api"
description = "Apis of sfacg and ciweimao"
readme = "README.md"
keywords = ["novel", "sfacg", "ciweimao"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
# https://github.com/dtolnay/thiserror
thiserror = { version = "1.0.40", default-features = false }
# https://github.com/serde-rs/serde
serde = { version = "1.0.163", default-features = false, features = [
  "std",
  "derive",
] }
# https://github.com/dtolnay/async-trait
async-trait = { version = "0.1.68", default-features = false }
# https://github.com/tokio-rs/tokio
tokio = { version = "1.28.1", default-features = false, features = [
  "fs",
  "sync",
  "rt-multi-thread",
  "parking_lot",
] }
# https://github.com/Amanieu/parking_lot
parking_lot = { version = "0.12.1", default-features = false, features = [
  "hardware-lock-elision",
] }
# https://github.com/matklad/once_cell
once_cell = { version = "1.17.1", default-features = false, features = [
  "std",
  "parking_lot",
] }
# https://github.com/rusticstuff/simdutf8
simdutf8 = { version = "0.1.4", default-features = false, features = [
  "std",
  "aarch64_neon",
] }
# https://github.com/serde-rs/json
serde_json = { version = "1.0.96", default-features = false, features = [
  "std",
] }
# https://github.com/causal-agent/scraper
scraper = { version = "0.16.0", default-features = false }
# https://github.com/uuid-rs/uuid
uuid = { version = "1.3.3", default-features = false, features = [
  "std",
  "v4",
  "fast-rng",
] }
# https://github.com/chronotope/chrono
chrono = { version = "0.4.24", default-features = false, features = [
  "std",
  "serde",
] }
# https://github.com/dtolnay/semver
semver = { version = "1.0.17", default-features = false, features = [
  "std",
  "serde",
] }
# https://github.com/tokio-rs/tracing
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
# https://github.com/Nugine/simd
hex-simd = { version = "0.8.0", default-features = false, features = [
  "std",
  "detect",
] }
# https://github.com/Nugine/simd
base64-simd = { version = "0.8.0", default-features = false, features = [
  "std",
  "detect",
] }
# https://github.com/cloudflare/boring
boring = { version = "2.1.0", default-features = false }
# https://github.com/dirs-dev/directories-rs
directories = { version = "5.0.1", default-features = false }
# https://github.com/pfernie/cookie_store
cookie_store = { version = "0.19.0", default-features = false }
# https://github.com/pfernie/reqwest_cookie_store
reqwest_cookie_store = { version = "0.5.0", default-features = false }
# https://github.com/hyperium/http
http = { version = "0.2.9", default-features = false }
# https://github.com/servo/rust-url
url = { version = "2.3.1", default-features = false, features = ["serde"] }
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "gzip",
  "brotli",
  "deflate",
  "json",
  "trust-dns",
] }
# https://github.com/seanmonstar/warp
warp = { version = "0.3.5", default-features = false }
# https://github.com/image-rs/image
image = { version = "0.24.6", default-features = false, features = [
  "png",
  "jpeg",
  "jpeg_rayon",
  "webp",
  "webp-encoder",
] }
# https://github.com/Nemo157/async-compression
async-compression = { version = "0.4.0", default-features = false, features = [
  "tokio",
  "zstd",
] }
# https://github.com/SeaQL/sea-orm
sea-orm = { version = "0.11.3", default-features = false, features = [
  "with-chrono",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
# https://github.com/SeaQL/sea-orm
sea-orm-migration = { version = "0.11.3", default-features = false }
# https://github.com/toml-rs/toml
toml = { version = "0.7.4", default-features = false, features = [
  "parse",
  "display",
] }
# https://github.com/hwchen/keyring-rs
keyring = { version = "2.0.2", default-features = false, features = [
  "linux-secret-service-rt-tokio-crypto-rust",
] }
# https://github.com/Hanaasagi/machine-uid
machine-uid = { version = "0.3.0", default-features = false }
# https://github.com/Seeker14491/opener
opener = { version = "0.6.1", default-features = false }
# https://github.com/Dentosal/portpicker-rs
portpicker = { version = "0.1.1", default-features = false }

[dev-dependencies]
# https://github.com/dtolnay/anyhow
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
# https://github.com/rust-pretty-assertions/rust-pretty-assertions
pretty_assertions = { version = "1.3.0", default-features = false, features = [
  "std",
] }
# https://github.com/tokio-rs/tokio
tokio = { version = "1.28.1", default-features = false, features = [
  "macros",
  "fs",
  "rt-multi-thread",
  "parking_lot",
] }
